[package]
name = "baekjoon"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"

[[example]]
name = "g09_11501"
path = "greedy/g09_11501.rs"

[[example]]
name = "g08_19941"
path = "greedy/g08_19941.rs"

[[example]]
name = "g07_18310"
path = "greedy/g07_18310.rs"

[[example]]
name = "g06_1049"
path = "greedy/g06_1049.rs"

[[example]]
name = "g05_10610"
path = "greedy/g05_10610.rs"

[[example]]
name = "notmy_1213"
path = "not_my_code/1213_BTreeMap_Vec_fliter.rs"

[[example]]
name = "g04_1213"
path = "greedy/g04_1213.rs"

[[example]]
name = "g03_13305"
path = "greedy/g03_13305.rs"

[[example]]
name = "g02_2217"
path = "greedy/g02_2217.rs"

[[example]]
name = "g01_1789"
path = "greedy/g01_1789.rs"

[[example]]
name = "boj_4358"
path = "data_structures/boj_4358.rs"

[[example]]
name = "boj_2304"
path = "data_structures/boj_2304.rs"

[[example]]
name = "boj_3986"
path = "data_structures/boj_3986.rs"

[[example]]
name = "boj_1302"
path = "data_structures/boj_1302.rs"

[[example]]
name = "boj_18258"
path = "data_structures/boj_18258.rs"

[[example]]
name = "boj_17608"
path = "data_structures/boj_17608.rs"

[[example]]
name = "boj_2605"
path = "data_structures/boj_2605.rs"

[[example]]
name = "boj_2161"
path = "data_structures/boj_2161.rs"

[[example]]
name = "boj_10815"
path = "binary_search/boj_10815.rs"

[[example]]
name = "boj_1920"
path = "binary_search/boj_1920.rs"

[[example]]
name = "practise"
path = "practise.rs"

[[example]]
name = "test"
path = "test.rs"