[package]
name = "baekjoon"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"

[[example]]
name = "n02_10972"
path = "math/n02_10972.rs"

[[example]]
name = "dyn01_10844"
path = "dynamic_programming/dyn01_10844.rs"

[[example]]
name = "bru03_3085"
path = "brute_force/bru03_3085.rs"

[[example]]
name = "bru02_14889"
path = "brute_force/bru02_14889.rs"

[[example]]
name = "bfs07_2206"
path = "graph/bfs07_2206.rs"

[[example]]
name = "dfs04_1987"
path = "graph/dfs04_1987.rs"

[[example]]
name = "dfs03_14502"
path = "graph/dfs03_14502.rs"

[[example]]
name = "dfs02_1743"
path = "graph/dfs02_1743.rs"

[[example]]
name = "acc08_21758"
path = "prefix_sum/acc08_21758.rs" 

[[example]]
name = "acc07_14465"
path = "prefix_sum/acc07_14465.rs"

[[example]]
name = "acc06_10986"
path = "prefix_sum/acc06_10986.rs"

[[example]]
name = "acc05_1451"
path = "acc_sum/acc05_1451.rs"

[[example]]
name = "acc04_1806"
path = "prefix_sum/acc04_1806.rs"

[[example]]
name = "acc03_25682"
path = "prefix_sum/acc03_25682.rs"

[[example]]
name = "acc02_16139"
path = "prefix_sum/acc02_16139.rs"

[[example]]
name = "acc01_11660"
path = "prefix_sum/acc01_11660.rs"

[[example]]
name = "bi12_2417"
path = "binary_search/bi12_2417.rs"

[[example]]
name = "bi11_8983"
path = "binary_search/bi11_8983.rs"

[[example]]
name = "two03_2295"
path = "binary_search/two03_2295.rs"

[[example]]
name = "bi10_2022"
path = "binary_search/bi10_2022.rs"

[[example]]
name = "bi09_1477"
path = "binary_search/bi09_1477.rs"

[[example]]
name = "dyn01_12852"
path = "graph/dyn01_12852.rs"

[[example]]
name = "dfs01_1926"
path = "graph/dfs01_1926.rs"

[[example]]
name = "bfs06_16234"
path = "graph/bfs06_16234.rs"

[[example]]
name = "back01_15649"
path = "brute_force/back01_15649.rs"

[[example]]
name = "bru01_16198"
path = "brute_force/bru01_16198.rs"

[[example]]
name = "n01_17427"
path = "math/n01_17427.rs"

[[example]]
name = "bfs05_5014"
path = "graph/bfs05_5014.rs"

[[example]]
name = "bfs04_7569"
path = "graph/bfs04_7569.rs"

[[example]]
name = "bfs03_14226"
path = "graph/bfs03_14226.rs"

[[example]]
name = "bfs02_10026"
path = "graph/bfs02_10026.rs"

[[example]]
name = "bfs01_2583"
path = "graph/bfs01_2583.rs"

[[example]]
name = "gra05_11403"
path = "graph/gra05_11403.rs"

[[example]]
name = "gra04_2644"
path = "graph/gra04_2644.rs"

[[example]]
name = "gra03_11725"
path = "graph/gra03_11725.rs"

[[example]]
name = "set01_2776"
path = "binary_search/set01_2776.rs"

[[example]]
name = "two03_3649"
path = "binary_search/two03_3649.rs"

[[example]]
name = "bi08_10816"
path = "binary_search/bi08_10816.rs"

[[example]]
name = "gra02_1389"
path = "graph/gra02_1389.rs"

[[example]]
name = "dfs_bfs01_1260"
path = "graph/dfs_bfs01_1260.rs"

[[example]]
name = "two02_1253"
path = "binary_search/two02_1253.rs"

[[example]]
name = "two01_2467"
path = "binary_search/two01_2467.rs"

[[example]]
name = "bi07_1166"
path = "binary_search/bi07_1166.rs"

[[example]]
name = "bi06_16401"
path = "binary_search/bi06_16401.rs"

[[example]]
name = "bi05_1654"
path = "binary_search/bi05_1654.rs"

[[example]]
name = "bi04_13702"
path = "binary_search/bi04_13702.rs"

[[example]]
name = "bi03_2512"
path = "binary_search/bi03_2512.rs"

[[example]]
name = "geo08_3495"
path = "geometry/geo08_3495.rs"

[[example]]
name = "geo07_1198"
path = "geometry/geo07_1198.rs"

[[example]]
name = "geo06_10655"
path = "geometry/geo06_10655.rs"

[[example]]
name = "geo05_16931"
path = "geometry/geo05_16931.rs"

[[example]]
name = "geo04_2527"
path = "geometry/geo04_2527.rs"

[[example]]
name = "geo03_1485"
path = "geometry/geo03_1485.rs"

[[example]]
name = "geo02_2477"
path = "geometry/geo02_2477.rs"

[[example]]
name = "geo01_1004"
path = "geometry/geo01_1004.rs"

[[example]]
name = "g09_11501"
path = "greedy/g09_11501.rs"

[[example]]
name = "g08_19941"
path = "greedy/g08_19941.rs"

[[example]]
name = "g07_18310"
path = "greedy/g07_18310.rs"

[[example]]
name = "g06_1049"
path = "greedy/g06_1049.rs"

[[example]]
name = "g05_10610"
path = "greedy/g05_10610.rs"

[[example]]
name = "notmy_1213"
path = "not_my_code/1213_BTreeMap_Vec_fliter.rs"

[[example]]
name = "g04_1213"
path = "greedy/g04_1213.rs"

[[example]]
name = "g03_13305"
path = "greedy/g03_13305.rs"

[[example]]
name = "g02_2217"
path = "greedy/g02_2217.rs"

[[example]]
name = "g01_1789"
path = "greedy/g01_1789.rs"

[[example]]
name = "boj_4358"
path = "data_structures/boj_4358.rs"

[[example]]
name = "boj_2304"
path = "data_structures/boj_2304.rs"

[[example]]
name = "boj_3986"
path = "data_structures/boj_3986.rs"

[[example]]
name = "boj_1302"
path = "data_structures/boj_1302.rs"

[[example]]
name = "boj_18258"
path = "data_structures/boj_18258.rs"

[[example]]
name = "boj_17608"
path = "data_structures/boj_17608.rs"

[[example]]
name = "boj_2605"
path = "data_structures/boj_2605.rs"

[[example]]
name = "boj_2161"
path = "data_structures/boj_2161.rs"

[[example]]
name = "boj_10815"
path = "binary_search/boj_10815.rs"

[[example]]
name = "boj_1920"
path = "binary_search/boj_1920.rs"

[[example]]
name = "practise"
path = "practise.rs"

[[example]]
name = "test"
path = "test.rs"