[package]
name = "baekjoon"
version = "0.1.0"
edition = "2021"

[[example]]
name = "dp10_9465"
path = "dynamic_programming/dp10_9465.rs"

[[example]]
name = "dp09_11057"
path = "dynamic_programming/dp09_11057.rs"

[[example]]
name = "dp08_2156"
path = "dynamic_programming/dp08_2156.rs"

[[example]]
name = "dp07_1932"
path = "dynamic_programming/dp07_1932.rs"

[[example]]
name = "dp06_1149"
path = "dynamic_programming/dp06_1149.rs"

[[example]]
name = "dp05_11053"
path = "dynamic_programming/dp05_11053.rs"

[[example]]
name = "dp04_1912"
path = "dynamic_programming/dp04_1912.rs"

[[example]]
name = "dp03_2193"
path = "dynamic_programming/dp03_2193.rs"

[[example]]
name = "ad01_10158"
path = "ad_hoc/ad01_10158.rs"

[[example]]
name = "n03_1024"
path = "math/n03_1024.rs"

[[example]]
name = "sort02_1015"
path = "sorting/sort02_1015.rs"

[[example]]
name = "bru04_1057"
path = "brute_force/bru04_1057.rs"

[[example]]
name = "bit01_1052"
path = "bit_masking/bit01_1052.rs"

[[example]]
name = "bru03_1025"
path = "brute_force/bru03_1025.rs"

[[example]]
name = "n03_1011"
path = "math/n03_1011.rs"

[[example]]
name = "dp02_1010"
path = "dynamic_programming/dp02_1010.rs"

[[example]]
name = "geo15_1051"
path = "geometry/geo15_1051.rs"

[[example]]
name = "dis06_16724"
path = "graph/dis06_16724.rs"

[[example]]
name = "dis05_10216"
path = "graph/dis05_10216.rs"

[[example]]
name = "bfs09_1939"
path = "graph/bfs09_1939.rs"

[[example]]
name = "dis04_20040"
path = "graph/dis04_20040.rs"

[[example]]
name = "dis03_1043"
path = "graph/dis03_1043.rs"

[[example]]
name = "dis02_1976"
path = "graph/dis02_1976.rs"

[[example]]
name = "dis01_1717"
path = "graph/dis01_1717.rs"

[[example]]
name = "geo14_3108"
path = "geometry/goe14_3108.rs"

[[example]]
name = "ccw05_6439"
path = "geometry/ccw05_6439.rs"

[[example]]
name = "ccw04_17387"
path =  "geometry/ccw04_17387.rs"

[[example]]
name = "geo11_7869"
path = "geometry/geo11_7869.rs"

[[example]]
name = "ccw03_12781"
path = "geometry/ccw03_12781.rs"

[[example]]
name = "geo10_1027"
path = "geometry/geo10_1027.rs"

[[example]]
name = "ccw02_2166"
path = "geometry/ccw02_2166.rs"

[[example]]
name = "ccw01_11758"
path = "geometry/ccw01_11758.rs"

[[example]]
name = "geo09_1069"
path = "geometry/geo09_1069.rs"

[[example]]
name = "gra06_2151"
path = "graph/gra06_2151.rs"

[[example]]
name = "dij08_1719"
path = "graph/dij08_1719.rs"

[[example]]
name = "dij07_14938"
path = "graph/dij07_14938.rs"

[[example]]
name = "dij06_1504"
path = "graph/dij06_1504.rs"

[[example]]
name = "acc09_11659"
path = "prefix_sum/acc09_11659.rs"

[[example]]
name = "dij05_9370"
path = "graph/dij05_9370.rs"

[[example]]
name = "dij04_11779"
path = "graph/dij04_11779.rs"

[[example]]
name = "dij03_1238"
path = "graph/dij03_1238.rs"

[[example]]
name = "bfs08_2665"
path = "graph/bfs08_2665.rs"

[[example]]
name = "dij02_4485"
path = "graph/dij02_4485.rs"

[[example]]
name = "1753"
path = "not_my_code/1753.rs"

[[example]]
name = "sort01_10814"
path = "sorting/sort01_10814.rs"

[[example]]
name = "gra06_1753"
path = "graph/dij01_1753.rs"

[[example]]
name = "sim04_14500"
path = "simulation/sim04_14500.rs"

[[example]]
name = "sim03_2578"
path = "simulation/sim03_2578.rs"

[[example]]
name = "sim02_14500"
path = "simulation/sim02_14500.rs"

[[example]]
name = "sim01_3190"
path = "simulation/sim01_3190.rs"

[[example]]
name = "g12_1946"
path = "greedy/g12_1946.rs"

[[example]]
name = "g11_1092"
path = "greedy/g11_1092.rs"

[[example]]
name = "g10_1041"
path = "greedy/g10_1041.rs"

[[example]]
name = "n02_10972"
path = "math/n02_10972.rs"

[[example]]
name = "dyn01_10844"
path = "dynamic_programming/dyn01_10844.rs"

[[example]]
name = "bru03_3085"
path = "brute_force/bru03_3085.rs"

[[example]]
name = "bru02_14889"
path = "brute_force/bru02_14889.rs"

[[example]]
name = "bfs07_2206"
path = "graph/bfs07_2206.rs"

[[example]]
name = "dfs04_1987"
path = "graph/dfs04_1987.rs"

[[example]]
name = "dfs03_14502"
path = "graph/dfs03_14502.rs"

[[example]]
name = "dfs02_1743"
path = "graph/dfs02_1743.rs"

[[example]]
name = "acc08_21758"
path = "prefix_sum/acc08_21758.rs" 

[[example]]
name = "acc07_14465"
path = "prefix_sum/acc07_14465.rs"

[[example]]
name = "acc06_10986"
path = "prefix_sum/acc06_10986.rs"

[[example]]
name = "acc05_1451"
path = "acc_sum/acc05_1451.rs"

[[example]]
name = "acc04_1806"
path = "prefix_sum/acc04_1806.rs"

[[example]]
name = "acc03_25682"
path = "prefix_sum/acc03_25682.rs"

[[example]]
name = "acc02_16139"
path = "prefix_sum/acc02_16139.rs"

[[example]]
name = "acc01_11660"
path = "prefix_sum/acc01_11660.rs"

[[example]]
name = "bi12_2417"
path = "binary_search/bi12_2417.rs"

[[example]]
name = "bi11_8983"
path = "binary_search/bi11_8983.rs"

[[example]]
name = "two03_2295"
path = "binary_search/two03_2295.rs"

[[example]]
name = "bi10_2022"
path = "binary_search/bi10_2022.rs"

[[example]]
name = "bi09_1477"
path = "binary_search/bi09_1477.rs"

[[example]]
name = "dyn01_12852"
path = "graph/dyn01_12852.rs"

[[example]]
name = "dfs01_1926"
path = "graph/dfs01_1926.rs"

[[example]]
name = "bfs06_16234"
path = "graph/bfs06_16234.rs"

[[example]]
name = "back01_15649"
path = "brute_force/back01_15649.rs"

[[example]]
name = "bru01_16198"
path = "brute_force/bru01_16198.rs"

[[example]]
name = "n01_17427"
path = "math/n01_17427.rs"

[[example]]
name = "bfs05_5014"
path = "graph/bfs05_5014.rs"

[[example]]
name = "bfs04_7569"
path = "graph/bfs04_7569.rs"

[[example]]
name = "bfs03_14226"
path = "graph/bfs03_14226.rs"

[[example]]
name = "bfs02_10026"
path = "graph/bfs02_10026.rs"

[[example]]
name = "bfs01_2583"
path = "graph/bfs01_2583.rs"

[[example]]
name = "gra05_11403"
path = "graph/gra05_11403.rs"

[[example]]
name = "gra04_2644"
path = "graph/gra04_2644.rs"

[[example]]
name = "gra03_11725"
path = "graph/gra03_11725.rs"

[[example]]
name = "set01_2776"
path = "binary_search/set01_2776.rs"

[[example]]
name = "two03_3649"
path = "binary_search/two03_3649.rs"

[[example]]
name = "bi08_10816"
path = "binary_search/bi08_10816.rs"

[[example]]
name = "gra02_1389"
path = "graph/gra02_1389.rs"

[[example]]
name = "dfs_bfs01_1260"
path = "graph/dfs_bfs01_1260.rs"

[[example]]
name = "two02_1253"
path = "binary_search/two02_1253.rs"

[[example]]
name = "two01_2467"
path = "binary_search/two01_2467.rs"

[[example]]
name = "bi07_1166"
path = "binary_search/bi07_1166.rs"

[[example]]
name = "bi06_16401"
path = "binary_search/bi06_16401.rs"

[[example]]
name = "bi05_1654"
path = "binary_search/bi05_1654.rs"

[[example]]
name = "bi04_13702"
path = "binary_search/bi04_13702.rs"

[[example]]
name = "bi03_2512"
path = "binary_search/bi03_2512.rs"

[[example]]
name = "geo08_3495"
path = "geometry/geo08_3495.rs"

[[example]]
name = "geo07_1198"
path = "geometry/geo07_1198.rs"

[[example]]
name = "geo06_10655"
path = "geometry/geo06_10655.rs"

[[example]]
name = "geo05_16931"
path = "geometry/geo05_16931.rs"

[[example]]
name = "geo04_2527"
path = "geometry/geo04_2527.rs"

[[example]]
name = "geo03_1485"
path = "geometry/geo03_1485.rs"

[[example]]
name = "geo02_2477"
path = "geometry/geo02_2477.rs"

[[example]]
name = "geo01_1004"
path = "geometry/geo01_1004.rs"

[[example]]
name = "g09_11501"
path = "greedy/g09_11501.rs"

[[example]]
name = "g08_19941"
path = "greedy/g08_19941.rs"

[[example]]
name = "g07_18310"
path = "greedy/g07_18310.rs"

[[example]]
name = "g06_1049"
path = "greedy/g06_1049.rs"

[[example]]
name = "g05_10610"
path = "greedy/g05_10610.rs"

[[example]]
name = "notmy_1213"
path = "not_my_code/1213_BTreeMap_Vec_fliter.rs"

[[example]]
name = "g04_1213"
path = "greedy/g04_1213.rs"

[[example]]
name = "g03_13305"
path = "greedy/g03_13305.rs"

[[example]]
name = "g02_2217"
path = "greedy/g02_2217.rs"

[[example]]
name = "g01_1789"
path = "greedy/g01_1789.rs"

[[example]]
name = "boj_4358"
path = "data_structures/boj_4358.rs"

[[example]]
name = "boj_2304"
path = "data_structures/boj_2304.rs"

[[example]]
name = "boj_3986"
path = "data_structures/boj_3986.rs"

[[example]]
name = "boj_1302"
path = "data_structures/boj_1302.rs"

[[example]]
name = "boj_18258"
path = "data_structures/boj_18258.rs"

[[example]]
name = "boj_17608"
path = "data_structures/boj_17608.rs"

[[example]]
name = "boj_2605"
path = "data_structures/boj_2605.rs"

[[example]]
name = "boj_2161"
path = "data_structures/boj_2161.rs"

[[example]]
name = "boj_10815"
path = "binary_search/boj_10815.rs"

[[example]]
name = "boj_1920"
path = "binary_search/boj_1920.rs"

[[example]]
name = "practise"
path = "practise.rs"

[[example]]
name = "test"
path = "test.rs"